syntax = "proto3";


service Product {
    rpc checkProduct (ProductRequest) returns (ProductResponse) {}
    rpc checkProducts (ProductsRequest) returns (ProductsResponse) {}
}

message Specs {
    string size = 1;
    string color = 2;
  }
  
message ProductDetail {
    string product_ratingAverage = 1;
    repeated string product_variation = 2;
    repeated string product_images = 3;
    string _id = 4;
    string code = 5;
    string name = 6;
    string author = 7;
    string description = 8;
    repeated string type = 9;
    string image_url = 10;
    float price = 11;
    bool active = 12;
    int32 purchases = 13;
    Specs specs = 14;
}
  
message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  ProductDetail product = 1;
}

message ProductsRequest {
    repeated string productIds = 1;
}
  
message ProductsResponse {
    bool isExist = 1;
    repeated ProductDetail products = 2;
    repeated string productIsNotExist = 3;
}